# Agentic_ai_poc

./: Patient_diff_agent.py  agentic_ai.ipynb  agentic_ai.py  main.py  patient_query_migration_agent.py  pyproject.toml  requirements.txt  supervisor_agent.py  validator.py  validator2.py
