[project]
name = "agentic-ai-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain[openai]>=1.2.15",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.8",
    "fastapi[standard]>=0.136.0",
    "pyodbc>=5.3.0",
    "azure-storage-blob>=12.28.0",
]
